--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,20 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "node": "18.0.0",
+      "prebuildCommand": "echo 'prebuild'",
+      "env": {
+        "SKIP_ENV_VALIDATION": "1"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "node": "18.0.0"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "node": "18.0.0"
     }
   },
   "submit": {
