--- a/eas.json
+++ b/eas.json
@@ -5,13 +5,8 @@
   },
   "build": {
     "development": {
-      "developmentClient": true,
       "distribution": "internal",
-      "node": "18.0.0",
-      "prebuildCommand": "echo 'prebuild'",
-      "env": {
-        "SKIP_ENV_VALIDATION": "1"
-      }
+      "node": "18.0.0"
     },
     "preview": {
       "distribution": "internal",
