--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.3.17",
+    "@types/react": "~18.2.79",
     "axios": "^1.6.2",
     "expo": "~51.0.8",
     "expo-camera": "~15.0.9",
@@ -21,7 +22,9 @@
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.10",
     "expo-notifications": "~0.28.16",
+    "expo-print": "~13.0.1",
     "expo-secure-store": "~13.0.1",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "lucide-react-native": "^0.544.0",
     "react": "18.2.0",
