--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-secure-store": "~13.0.1",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.28",
     "lucide-react-native": "^0.544.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
